# personal-website

./: .gitignore  Cargo.toml  README.md  index.css  index.html
.github/workflows/: github-pages.yml
src/: main.rs
src/pages/: index.rs
src/pages/styles/: index.css
